Fix stretching images on posts

--- a/css/home.css
+++ b/css/home.css
@@ -98,5 +98,4 @@ a {
 
 .post img {
   height: 100%;
-  width: 100%;
 }
